2006-10-08  JC Baillie  <baillie@gostai.com>

	fix 'new' behavior when no init is present and no parameters are given 

When invoquing new with no parameters, the default "empty" constructor is now called,
even if the init function has not been explicitly declared.

	* ucommand.cc: fix UCommand_NEW behavior when new has no param and no init is defined.

2006-10-08  JC Baillie  <baillie@gostai.com>

	no recursive inheritance 

	* ucommand.cc: fix a=new a; this is not permitted.

2006-10-08  Type Your Name Here  <your.mail.here@fixme.com>

	Name resolution fix in object methods + akim bug in booleval reverted 

Some cleanup of warning messages during compile.
Fix a name resolution bug in object methods when attributes are defined in the 
origin class and not in the child class.
Akim removed a "if (freeme)" before a delete in booleval. Reverted.

	* ucommand.cc: cleanup warnings.
	* parser/bison/ugrammar.y: cleanup of unecessary comments.
	* uexpression.cc: cleanup warnings, fix indent.
	* uvalue.cc: remove booleval bug, fix indent.
	* uvariable.cc: cleanup warnings, fix indent.
	* INSTALL: remove old install notes.
	* userver.cc: cleanup warnings.
	* uobj.cc: add searchEvent function.
	* uobj.h: add searchEvent definition.
	* uvariablename.cc: fix name resolution in object methods with inheritance.
	* LICENSE-URBI-LANGUAGE: Remove.

2006-10-06  Akim Demaille  <akim@lrde.epita.fr>

	Bison and Flex output are no longer shipped.
	Therefore they are now in the build tree.
	* parser/bison/bison.mk: Implement these changes.
	* Makefile.am (CLEANFILES): Initialize.
	* configure.ac: Require exactly Flex 2.5.4.
	Require at least Bison 2.2.

2006-10-06  Akim Demaille  <akim@lrde.epita.fr>

	Fix Perl invocation.
	* parser/bison/bison.mk: Beware that perl needs the file to
	process after the -e.
	* parser/bison/ugrammar.y: Sugar.

2006-10-06  Akim Demaille  <akim@lrde.epita.fr>

	Sugar the parser.
	* parser/bison/ugrammar.y (NEW_EXP_2): New.
	Use it.
