@@ -1,0 +1,35 @@
+/*! \file ueventhandler.cc
+ *******************************************************************************
+
+ File: ueventhandler.cc\n
+ Implementation of the UEventHanlder class.
+
+ This file is part of
+ %URBI Kernel, version __kernelversion__\n
+ (c) Jean-Christophe Baillie, 2004-2005.
+
+ This software is provided "as is" without warranty of any kind,
+ either expressed or implied, including but not limited to the
+ implied warranties of fitness for a particular purpose.
+
+ For more information, comments, bug reports: http://www.urbiforge.net
+
+ **************************************************************************** */
+#include <cstdio>
+#ifdef _MSC_VER
+#define snprintf _snprintf
+#endif
+
+#include "ueventhandler.h"
+
+// **************************************************************************
+//! UEventHandler constructor.
+UEventHandler::UEventHandler (UString *device)
+{
+}
+
+//! UEventHandler destructor
+UEventHandler::~UEventHandler()
+{
+}
+
